# url

./: .gitignore  Cargo.toml  Dockerfile
.github/: docker-image-tagged-releases.yml
.github/workflows/: docker-image.yml
app/: Cargo.toml
app/src/: config.rs  main.rs  schema.rs  web.rs
app/src/api/: auth_middleware.rs  default_headers_middleware.rs  mod.rs
app/src/model/: api_key.rs  db.rs  error.rs  mod.rs  url.rs
cli/: Cargo.toml
cli/src/: config.rs  main.rs
cli/src/commands/: delete.rs  key.rs  mod.rs  new.rs
cli/src/model/: error.rs
migrations/2022-04-16-201308_create_urls/: up.sql
migrations/2022-04-21-083650_create_api_keys/: down.sql  up.sql
