[package]
name = "seqtf_url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["full"] }
serde = { version = "^1.0", features = ["derive"]}
serde_json = "^1"
toml = "^0.5"
log = "^0.4"
tracing = "^0.1"
tracing-subscriber = "^0.2"
tracing-log = "^0.1"
anyhow = "^1"
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
actix-web = "^4"
async-trait = "^0.1"
futures-util = "^0.3"
http = "^0.2"
nano-id = "0.2.0"
getrandom = "0.2.6"