[package]
name = "seqtf_url_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive", "cargo"] }
reqwest = { version = "^0.11", features = ["json"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "^0.8"
futures = "^0.3"
tokio = {version = "^1", features = ["full"]}
anyhow = "^1.0"
thiserror = "^1.0"
dirs = "4.0.0"